# snake-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  my_tests  no.txt  snake  snake.cpp  snake.h  snake_input_test.cpp  snake_test.cpp
src/: main.cpp  snake.cpp  snake.h
tests/: snake_input_test.cpp  snake_test.cpp
